--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -786,7 +786,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** Based on the classification report, the results suggest that the model is very goog at correctly identifying high-risk loans, with a relatively low number of false positives and a high level of confidence,"
    ]
   },
   {
